--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" type="text/css" href="css/media.css">
+    <link rel="stylesheet" type="text/css" href="css/all.css">
     <link rel="icon" class="icon-top"  href="images/single-1.png" type="icon">
 
     <title>Tajam</title>
@@ -29,7 +30,6 @@
     <!-- logo end-->
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#nav-menu" aria-controls="nav-menu" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon icon1">
-        <i class="fas fa-bars"></i>
       </span>
     </button>
 
@@ -43,7 +43,7 @@
           <a class="nav-link link1" href="#story">ABOUT</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link link1" href="story-video">EXPERTISE</a>
+          <a class="nav-link link1" href="#story-video">EXPERTISE</a>
         </li>
         <li class="nav-item">
           <a class="nav-link link1" href="#">TEAMS</a>
@@ -212,16 +212,95 @@
             </div>
           </div>
           <!--single end-->
-
-          
-
         </div>
-
-
-    </div>
+      </div>
   </div>
 </section>
+
 <!--EXPERTISE end-->
+<!--footer start-->
+<footer class="f-banner">
+  <div class="container">
+    <div class="row">
+      <!--1st row-->
+      <div class="col-lg-4">
+        <div class="f-logo">
+          <img src="images/logo.png" alt="Tajam">
+        </div>
+        <div class="f-text">
+          <address>
+            <p class="mb-0">lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh elit. Duis sed odio sit amet auctror a ornare odio non mauris vitae erat in elit</p>
+          </address>
+          <div class="row">
+            <div class="col-3">
+              <div class="f1">
+                <p class="mb-0"><a href="#">HELP</a></p>
+              </div>
+            </div>
+            <div class="col-6">
+              <div class="f1">
+                <p class="mb-0"><a href="#">TERMS & CONDITION</a></p>
+              </div>
+            </div>
+            <div class="col-3">
+              <div class="f1">
+                <p class="mb-0"><a href="#">PRIVACY</a></p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!--2nd row-->
+      <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12">
+        <div class="f2">
+          <h4>OUR STUDIO</h4>
+          <div class="row">
+            <div class="col-lg-1 col-md-1 col-sm-1 col-xs-6">
+              <div class="f2-icon">
+                <i class="fas fa-map-marker-alt mb-0"></i>
+              </div>
+            </div>
+            <div class="col-lg-10 col-md-10 col-sm-10 col-xs-6">
+              <address>
+                <div class="f2-text">
+                  <p  class="mb-0">Ruko cucruk, Jl. Radio luar dalem jos No.12 - 13, Kalideres - Jakarta Barat 11480 - Indonesia</p>
+                </div>
+              </address>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1">
+              <div class="f2-icon">
+               <i class="fas fa-phone"></i>
+              </div>
+            </div>
+            <div class="col-lg-10 col-md-9 col-sm-9 col-xs-9">
+              <address>
+                <div class="f2-text ">
+                  <p  class="mb-0">(+62) 21-2224 3333</p>
+                </div>
+              </address>
+            </div>
+          </div>
+        </div>
+
+      </div>
+      <!--3rd row-->
+      <div class="col-lg-4">
+        <div class="c-social text-center">
+          <ul class="list-inline mb-0">
+            <li class="list-inline-item"><a href="index.html"><i class="fab fa-facebook-f"></i></a></li>
+            <li class="list-inline-item"><a href="index.html"><i class="fab fa-twitter"></i></a></li>
+            <li class="list-inline-item"><a href="index.html"><i class="fab fa-google-plus-g"></i></a></li>
+            <li class="list-inline-item"><a href="index.html"><i class="fab fa-pinterest-p"></i></a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+  
+</footer>
+<!--footer end-->
 
     <!-- Option 2: Separate Popper and Bootstrap JS -->
 
